Fixed horizontal scroll - margin 0 on row

--- a/src/scss/base/_nav.scss
+++ b/src/scss/base/_nav.scss
@@ -59,7 +59,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		height: 100%;
+		// height: 100%;
 		&:hover {
 			background-color: abstracts.$darkblue;
 			a {
